<?xml version="1.0"?>
<package format="2">
  <name>launch_file</name>
  <version>2.0.0</version>
  <description>Legacy launch and navigation parameter files kept for ROS_DIFF v1 reference.</description>
  <maintainer email="jiuden777@163.com">jiuden</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
